@@ -13,6 +13,7 @@ To take advantage of all SFCGAL featurs, SFCGAL 1.4.1+ is needed.
           (Sandro Santilli, Loïc Bartoletti)
  - #5680, Fix populate_topology_layer with standard_conforming_strings
           set to off (Sandro Santilli)
+ - #5589, ST_3DDistance error for shared first point (Paul Ramsey)
 
 
 PostGIS 3.4.2
